# d2x

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  d2x.yml  d2x_job_run.sh  devhub.sh  mkdocs.yml  pyproject.cci.toml  pyproject.d2x.toml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.in
.devcontainer/: Dockerfile  devcontainer.json  pureline.conf
.github/: dependabot.yml
.github/actions/: prepare-d2x-docker.yml
.github/workflows/: 2gp-feature-test.yml  automerge.yml  beta-test-2gp.yml  beta-test-env.yml  beta-test-scratch.yml  beta-test-unlocked.yml  beta-test.yml  build-feature-test-package.yml  build.yml  build_prototype.yml  cache-d2x-docker.yml  check-no-org.yml  configure-org-for-testing.yml  create-feature-test-package.yml  create-org.yml  create-scratch-unmanaged.yml  create-test-scratch-org.yml  delete-environment.yml  delete-org-session.yml  dependencies-snapshot.yml  dispose-org.yml  docker-publish.yml  feature-test-2gp copy.yml  feature-test-2gp-snapshot.yml  feature-test-2gp.yml  feature-test-snapshot.yml  feature-test-unlocked.yml  feature-test.yml  investigate-1gp.yml  masterRuleset.xml  (+18 more)
d2x/: __init__.py  api.py  models.py
docs/: cumulusci-next.md  index.md  requirements.txt  troubleshooting.md  tutorial.md  vision-oem.md  vision.md
scripts/: auth.js  create_github_check.py  devhub.sh  extract_failed.py  log_package.py  log_package_info.py  parse_metadata_deletions.py  parse_metadata_deletions.sh
tests/: test_auth.py  test_auth_url.py  test_cli.py  test_login_url.py  test_metadata_tracking.py  test_org_models.py
(+58 files in other folders)
