[tool.poetry]
name = "d2x"
version = "0.1.0"
description = "Salesforce DevOps Helper"
authors = ["Muselab LLC"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
