[tool.poetry]
name = "d2x"
version = "0.1.2"
description = "Salesforce DevOps Helper"
authors = ["Muselab LLC"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.3"
pydantic = "^2.9.2"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"