# pyproject.toml
[tool.poetry]
name = "d2x"
version = "0.1.3"
description = "Composable Salesforce DevOps on GitHub"
authors = ["Muselab LLC"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.3"
pydantic = "^2.9.2"
cookiecutter = "^2.6.0"
requests = "^2.28.1"
click = "^8.1.3"
rich_click = "^1.0.0"
pynacl = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pip-tools = "^7.4.1"

[tool.poetry.scripts]
d2x = "d2x.cli.main:d2x_cli"

[project]
name = "d2x"

[project.scripts]
d2x = "d2x.cli:d2x_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pip-compile]
generate-hashes = true
output-file = "requirements.txt"
